Updated start scripts.